--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,6 +100,15 @@ a {
   text-decoration: none;
 }
 
+.not-found {
+  text-align: center;
+}
+
+.not-found a{
+  color: #4979ff;
+  text-decoration: underline;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
