--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -65,6 +65,21 @@
   font-family: var(--font-mono);
 }
 
+.bbutton {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: rgb(51, 49, 49);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 15px;
+  padding: 10px;
+  width: 100px;
+  cursor: pointer;
+  margin: 5px;
+  font-family: var(--font-mono);
+}
+
 .card {
   padding: 1rem 1.2rem;
   border-radius: var(--border-radius);
