added linting and env

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -72,7 +72,7 @@
   border-radius: 4px;
   background-color: rgb(51, 49, 49);
   border: none;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   font-size: 15px;
   padding: 10px;
@@ -87,7 +87,7 @@
   border-radius: 4px;
   background-color: rgb(51, 49, 49);
   border: none;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   font-size: 15px;
   padding: 10px;
@@ -103,7 +103,6 @@
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
-
 }
 
 .cardimg {
@@ -160,7 +159,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -168,7 +167,7 @@
 }
 
 .button {
-  background-color:black ;
+  background-color: black;
   border: 1px solid #1097da;
   color: white;
   padding: 12px 24px;
@@ -181,11 +180,11 @@
 }
 
 .button:hover {
-  background-color: #1c99d7;;
+  background-color: #1c99d7;
 }
 
 .brieftoolButton {
-  background-color:#1A1A1A;
+  background-color: #1a1a1a;
   border: 1px solid #1097da;
   color: white;
   padding: 12px 24px;
@@ -198,7 +197,7 @@
 }
 
 .brieftoolButton:hover {
-  background-color: #1c99d7;;
+  background-color: #1c99d7;
 }
 
 /* adding team page stuff here */
@@ -209,17 +208,17 @@
 .wrapper h1 {
   font-family: var(--font-mono);
   font-size: 48px;
-  color : white
+  color: white;
 }
 
-.ourTeam{
+.ourTeam {
   display: flex;
   width: auto;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-.member{
+.member {
   width: 250px;
   margin: 5px;
 }
@@ -273,7 +272,6 @@
     max-width: 320px;
     justify-content: space-between;
     text-align: center;
-
   }
 
   .card {
@@ -282,7 +280,6 @@
     background: rgba(var(--card-rgb), 0);
     border: 1px solid rgba(var(--card-border-rgb), 0);
     transition: background 200ms, border 200ms;
-
   }
 
   .card span {
@@ -328,7 +325,7 @@
 
   .center::before,
   .center::after {
-    content: '';
+    content: "";
     left: 50%;
     position: absolute;
     filter: blur(45px);
@@ -356,7 +353,7 @@
 
   .thirteen::before,
   .thirteen::after {
-    content: '';
+    content: "";
     position: absolute;
     z-index: -1;
   }
@@ -383,16 +380,16 @@
   }
 }
 
-  /* Enable hover only on non-touch devices */
-  @media (hover: hover) and (pointer: fine) {
-    .card:hover {
-      background: rgba(var(--card-rgb), 0.1);
-      border: 1px solid rgba(var(--card-border-rgb), 0.15);
-    }
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {
+  .card:hover {
+    background: rgba(var(--card-rgb), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+  }
 
-    .card:hover span {
-      transform: translateX(4px);
-    }
+  .card:hover span {
+    transform: translateX(4px);
+  }
 }
 
 /* Tablet and Smaller Desktop */
@@ -403,117 +400,116 @@
   }
 }
 
-  @media (prefers-reduced-motion) {
-    .thirteen::before {
-      animation: none;
-    }
-
-    .card:hover span {
-      transform: none;
-    }
+@media (prefers-reduced-motion) {
+  .thirteen::before {
+    animation: none;
   }
 
-  /* Mobile */
-  @media (max-width: 700px) {
-    .content {
-      padding: 4rem;
-    }
+  .card:hover span {
+    transform: none;
+  }
+}
 
-    .grid {
-      grid-template-columns: 1fr;
-      margin-bottom: 120px;
-      max-width: 700px;
-      text-align: center;
-    }
-
-    .card {
-      padding: 1rem 2.5rem;
-    }
-
-    .card h2 {
-      margin-bottom: 0.5rem;
-    }
-
-    .center {
-      padding: 8rem 0 6rem;
-    }
-
-    .center::before {
-      transform: none;
-      height: 300px;
-    }
-
-    .description {
-      font-size: 0.8rem;
-    }
-
-    .description a {
-      padding: 1rem;
-    }
-
-    .description p,
-    .description div {
-      display: flex;
-      justify-content: center;
-      position: fixed;
-      width: 100%;
-    }
-
-    .description p {
-      align-items: center;
-      inset: 0 0 auto;
-      padding: 2rem 1rem 1.4rem;
-      border-radius: 0;
-      border: none;
-      border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-      background: linear-gradient(
-        to bottom,
-        rgba(var(--background-start-rgb), 1),
-        rgba(var(--callout-rgb), 0.5)
-      );
-      background-clip: padding-box;
-      backdrop-filter: blur(24px);
-    }
-
-    .description div {
-      align-items: flex-end;
-      pointer-events: none;
-      inset: auto 0 0;
-      padding: 2rem;
-      height: 200px;
-      background: linear-gradient(
-        to bottom,
-        transparent 0%,
-        rgb(var(--background-end-rgb)) 40%
-      );
-      z-index: 1;
-    }
+/* Mobile */
+@media (max-width: 700px) {
+  .content {
+    padding: 4rem;
   }
 
-  /* Tablet and Smaller Desktop */
-  @media (min-width: 701px) and (max-width: 1120px) {
-    .grid {
-      grid-template-columns: repeat(2, 50%);
-    }
+  .grid {
+    grid-template-columns: 1fr;
+    margin-bottom: 120px;
+    max-width: 700px;
+    text-align: center;
   }
 
-  @media (prefers-color-scheme: dark) {
-    .vercelLogo {
-      filter: invert(1);
-    }
-
-    .logo,
-    .thirteen img {
-      filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-    }
+  .card {
+    padding: 1rem 2.5rem;
   }
 
-
-  @keyframes rotate {
-    from {
-      transform: rotate(360deg);
-    }
-    to {
-      transform: rotate(0deg);
-    }
+  .card h2 {
+    margin-bottom: 0.5rem;
   }
+
+  .center {
+    padding: 8rem 0 6rem;
+  }
+
+  .center::before {
+    transform: none;
+    height: 300px;
+  }
+
+  .description {
+    font-size: 0.8rem;
+  }
+
+  .description a {
+    padding: 1rem;
+  }
+
+  .description p,
+  .description div {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+  }
+
+  .description p {
+    align-items: center;
+    inset: 0 0 auto;
+    padding: 2rem 1rem 1.4rem;
+    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
+    background: linear-gradient(
+      to bottom,
+      rgba(var(--background-start-rgb), 1),
+      rgba(var(--callout-rgb), 0.5)
+    );
+    background-clip: padding-box;
+    backdrop-filter: blur(24px);
+  }
+
+  .description div {
+    align-items: flex-end;
+    pointer-events: none;
+    inset: auto 0 0;
+    padding: 2rem;
+    height: 200px;
+    background: linear-gradient(
+      to bottom,
+      transparent 0%,
+      rgb(var(--background-end-rgb)) 40%
+    );
+    z-index: 1;
+  }
+}
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 701px) and (max-width: 1120px) {
+  .grid {
+    grid-template-columns: repeat(2, 50%);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .vercelLogo {
+    filter: invert(1);
+  }
+
+  .logo,
+  .thirteen img {
+    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
